--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
