--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Trying to deploy",
   "main": "server/server.js",
+  "engines": {
+    "node": ">= 7.0.0"
+  },
   "scripts": {
     "test": "test",
     "start-dev": "webpack -w & nodemon server.js",
