--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "node": ">= 7.0.0"
   },
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start-dev": "webpack -w & nodemon server.js",
+    "start": "webpack-dev-server --open & npm run watch",
+    "watch": "webpack -d --watch",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
