--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   },
   "scripts": {
     "test": "test",
-    "start": "node server/server.js",
+    "start": "webpack-dev-server --open --config webpack.dev.js",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
-    "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
     "watch": "webpack -d --watch",
     "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.10.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.17.1",
@@ -33,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.2",
     "sequelize": "^5.21.11"
   },
   "devDependencies": {
